--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,7 +51,7 @@ h1{
 	border: 3px solid #ffffff;
 	border-radius: 15px;
 	padding: 2px;
-	margin-top: 10px;
+	margin-top: 30px;
 	background-color: #A2A2A2;
 }
 
@@ -89,6 +89,13 @@ h1{
 	margin: 10px 0;
 }
 
+.labels{
+	display: flex;
+	flex-direction: row;
+	justify-content: space-around;
+	text-align: center;
+}
+
 #characters{
 	width: 100%;
 	display: flex;
@@ -103,9 +110,6 @@ h1{
 }
 
 #enemies{
-	clear:both;
-	overflow: hidden;
-	width: 100%;
 	height: 250px;
 	display: flex;
 	flex-direction: row;
@@ -121,11 +125,12 @@ h1{
 		border-bottom-left-radius: 50px;
 }
 
-.content-hero{
+
+#hero{
 	width:35%;
 	float:left;
 	display: flex;
-	flex-direction: column;
+	flex-direction: row;
 	justify-content: space-around;
 	-webkit-border-top-left-radius: 50px;
 	-webkit-border-top-right-radius: 10px;
@@ -139,10 +144,6 @@ h1{
 	border-top-right-radius: 10px;
 	border-bottom-right-radius: 5px;
 	border-bottom-left-radius: 5px;
-}
-
-#hero{
-	margin:0 auto;
 
 }
 
@@ -176,11 +177,11 @@ h1{
 	opacity: 0.9;
 }
 
-.content-defender{
+#defender{
 	width:35%;
 	float:right;
 	display: flex;
-	flex-direction: column;
+	flex-direction: row;
 	justify-content: space-around;
 	-webkit-border-top-left-radius: 10px;
 	-webkit-border-top-right-radius: 50px;
@@ -196,9 +197,12 @@ h1{
 	border-bottom-left-radius: 5px;
 }
 
-#defender{
-	margin: 0 auto;
+.clearfix{
+	clear:both;
+	overflow: hidden;
+	width: 100%;
 }
+
 
 #game-window{
 	display:none;
